# thesis-model

./: README.md  pyproject.toml
Project_models/: Model_V1  Model_V2  fetch_articles.py  pdf.py  pdf_saver.py  trends.py
